package cl.ucn.disc.dsm.pictwin.backend.model;

/**
 * @author Benjamin Millas
 * Class state
 */
public enum State {
    ACTIVE,
    BANNED
}
